--- a/docker/php-fpm/Dockerfile
+++ b/docker/php-fpm/Dockerfile
@@ -8,7 +8,8 @@ RUN apt-get update; \
         php7.4-intl \
         php7.4-mysql \
         php7.4-pgsql \
-        php7.4-memcached; \
+        php7.4-memcached \
+        php7.4-redis; \
     apt-get clean; \
     rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* /usr/share/doc/*
 
