--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,7 +53,8 @@ services:
         container_name: postgres
         restart: always
         volumes:
-            - ./db/pgsql:/var/lib/postgresql/data
+            #- ./db/pgsql:/var/lib/postgresql/data
+            - pgsql:/var/lib/postgresql/data
         environment:
             - POSTGRES_DB=smf
             - POSTGRES_USER=user
