--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,117 +1,125 @@
-version: '3.9'
-
 services:
-    memcached:
-        image: memcached:alpine
-        container_name: memcached
 
-    redis:
-        image: redis:alpine
-        container_name: redis
-        restart: always
-        volumes:
-            - redis:/data
-            #- ./docker/redis/redis.conf:/usr/local/etc/redis/redis.conf
+  memcached:
+    image: memcached:alpine
+    container_name: ${APP_NAME}_memcached
 
-    ftp:
-        image: stilliard/pure-ftpd
-        container_name: ftp
-        restart: always
-        environment:
-            - PUBLICHOST=localhost
-            - FTP_USER_NAME=user
-            - FTP_USER_PASS=pass
-            - FTP_USER_HOME=/var/www/html
-        volumes:
-            - ftp:/etc/pure-ftpd/passwd
-            - ftp:/home/ftpusers
-            - smf:/var/www/html
-        ports:
-            - "21:21"
-            - "30000-30009:30000-30009"
-        depends_on:
-            - smf
+  # redis:
+  #   image: redis:alpine
+  #   container_name: ${APP_NAME}_redis
+  #   restart: always
+  #   volumes:
+  #       - redis:/data
+  #       - ./_docker/redis/redis.conf:/usr/local/etc/redis/redis.conf
 
-    mariadb:
-        image: mariadb
-        container_name: mariadb
-        restart: always
-        environment:
-            - MYSQL_ROOT_PASSWORD=root
-            - MYSQL_DATABASE=smf
-            - MYSQL_USER=user
-            - MYSQL_PASSWORD=pass
-        volumes:
-            #- ./db/mysql:/var/lib/mysql
-            - mysql:/var/lib/mysql
-            #- ./db/dump.sql:/docker-entrypoint-initdb.d/dump.sql
-        # ports:
-        #     - 3306:3306
+  # ftp:
+  #   image: stilliard/pure-ftpd
+  #   container_name: ${APP_NAME}_ftp
+  #   restart: always
+  #   environment:
+  #     PUBLICHOST: localhost
+  #     FTP_USER_NAME: user
+  #     FTP_USER_PASS: pass
+  #     FTP_USER_HOME: /app
+  #   volumes:
+  #     - ftp:/etc/pure-ftpd/passwd
+  #     - ftp:/home/ftpusers
+  #     - web:/app
+  #   ports:
+  #     - "21:21"
+  #     - "30000-30009:30000-30009"
+  #   depends_on:
+  #     - smf
 
-    postgres:
-        image: 'postgres:14-alpine'
-        container_name: postgres
-        restart: always
-        volumes:
-            #- ./db/pgsql:/var/lib/postgresql/data
-            - pgsql:/var/lib/postgresql/data
-        environment:
-            - POSTGRES_DB=smf
-            - POSTGRES_USER=user
-            - POSTGRES_PASSWORD=pass
-        ports:
-            - 5432:5432
+  # mysql:
+  #     image: mysql
+  #     container_name: ${APP_NAME}_mysql
+  #     command: --default-authentication-plugin=mysql_native_password
+  #     restart: always
+  #     volumes:
+  #       - mysql:/var/lib/mysql
+  #     environment:
+  #       - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
+  #       - MYSQL_DATABASE=${DB_NAME}
+  #       - MYSQL_USER=${DB_USER}
+  #       - MYSQL_PASSWORD=${DB_PASS}
 
-    adminer:
-        image: adminer
-        container_name: adminer
-        restart: always
-        environment:
-            - ADMINER_DEFAULT_SERVER=mariadb
-            - ADMINER_DESIGN=lucas-sandery
-        ports:
-            - 8080:8080
-        depends_on:
-            - mariadb
-            # - postgres
+  mariadb:
+    image: mariadb:10.7
+    container_name: ${APP_NAME}_mariadb
+    restart: always
+    volumes:
+      - mysql:/var/lib/mysql
+    environment:
+      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
+      - MYSQL_DATABASE=${DB_NAME}
+      - MYSQL_USER=${DB_USER}
+      - MYSQL_PASSWORD=${DB_PASS}
 
-    web:
-        image: nginx:alpine
-        container_name: web
-        working_dir: /var/www/html
-        volumes:
-            #- ./src:/var/www/html
-            - smf:/var/www/html
-            - ./docker/nginx/nginx.conf:/etc/nginx/conf.d/default.conf
-            #- ./logs:/var/log/nginx
-        ports:
-            - 80:80
+  postgres:
+    image: 'postgres:14-alpine'
+    container_name: ${APP_NAME}_postgres
+    restart: always
+    volumes:
+      - pgsql:/var/lib/postgresql/data
+    environment:
+      - POSTGRES_DB:=${DB_NAME}
+      - POSTGRES_USER=${DB_USER}
+      - POSTGRES_PASSWORD=${DB_PASS}
 
-    php-fpm:
-        build:
-            context: ./docker/php-fpm
-            target: backend
-        container_name: backend
-        working_dir: /var/www/html
-        volumes:
-            #- ./src:/var/www/html
-            - smf:/var/www/html
-            - ./docker/php-fpm/php-ini-overrides.ini:/etc/php/7.4/fpm/conf.d/99-overrides.ini
+  adminer:
+    image: adminer
+    container_name: ${APP_NAME}_adminer
+    restart: always
+    environment:
+      ADMINER_DEFAULT_SERVER: mariadb
+      ADMINER_DESIGN: lucas-sandery
+    ports:
+      - 8080:8080
+    depends_on:
+      - mariadb
+      - postgres
 
-    smf:
-        build:
-            context: ./docker/php-fpm
-            target: smf
-        container_name: smf
-        working_dir: /var/www/html
-        volumes:
-            - smf:/var/www/html
-        depends_on:
-            - php-fpm
+  php:
+    env_file: .env
+    build:
+      context: ./_docker/php-fpm
+      args:
+        PHP_VERSION: ${PHP_VERSION}
+      target: backend
+    container_name: ${APP_NAME}_php_fpm
+    working_dir: /app
+    restart: always
+    volumes:
+      - web:/app
+      - ./_docker/php-fpm/php-ini-overrides.ini:/etc/php/${PHP_VERSION}/fpm/conf.d/99-overrides.ini
+
+  smf:
+    build:
+      context: ./_docker/php-fpm
+      target: smf
+    container_name: ${APP_NAME}_smf
+    working_dir: /app
+    volumes:
+      - web:/app
+    depends_on:
+      - php
+
+  apache:
+    image: bitnami/apache:2.4
+    container_name: ${APP_NAME}_apache
+    restart: always
+    ports:
+      - 80:8080
+    volumes:
+      - ./_docker/apache/httpd.conf:/vhosts/httpd.conf:ro
+      - web:/app
+    depends_on:
+      - mariadb
+      - php
 
 volumes:
-    smf:
-    mysql:
-    pgsql:
-    redis:
-    ftp:
+  redis:
+  mysql:
+  pgsql:
+  web:
