--- a/_docker/apache/httpd.conf
+++ b/_docker/apache/httpd.conf
@@ -2,7 +2,7 @@ LoadModule proxy_fcgi_module modules/mod_proxy_fcgi.so
 <VirtualHost *:8080>
 	ServerName localWeb
 	DocumentRoot /app
-	ProxyPassMatch ^/(.*\.php(/.*)?)$ fcgi://php:9000/app/$1
+	ProxyPassMatch ^/(.*\.php(/.*)?)$ fcgi://php-fpm:9000/app/$1
 	<Directory "/app">
 		Options All Indexes FollowSymLinks
 		AllowOverride All
