--- a/_docker/nginx/default.conf
+++ b/_docker/nginx/default.conf
@@ -1,8 +1,16 @@
 server {
-    listen 0.0.0.0:8080;
-    server_name smf.local;
+    listen 8080 default_server;
+    listen 8443 ssl default_server;
+    server_name localhost;
     access_log /opt/bitnami/nginx/logs/access.log;
     error_log /opt/bitnami/nginx/logs/error.log;
+
+    ssl_certificate      /certs/server.crt;
+    ssl_certificate_key  /certs/server.key;
+    ssl_session_cache    shared:SSL:1m;
+    ssl_session_timeout  5m;
+    ssl_ciphers  HIGH:!aNULL:!MD5;
+    ssl_prefer_server_ciphers  on;
 
     root /app;
     index index.php;
