--- a/compose.yaml
+++ b/compose.yaml
@@ -45,7 +45,7 @@ services:
   #       - MYSQL_PASSWORD=${DB_PASS}
 
   mariadb:
-    image: mariadb:10.7
+    image: mariadb
     container_name: ${APP_NAME}_mariadb
     restart: always
     volumes:
@@ -57,7 +57,7 @@ services:
       - MYSQL_PASSWORD=${DB_PASS}
 
   postgres:
-    image: 'postgres:14-alpine'
+    image: 'postgres:alpine'
     container_name: ${APP_NAME}_postgres
     restart: always
     volumes:
@@ -81,7 +81,6 @@ services:
       - postgres
 
   php-fpm:
-    env_file: .env
     build:
       context: ./_docker/php-fpm
       args:
@@ -106,13 +105,15 @@ services:
       - php-fpm
 
   apache:
-    image: bitnami/apache:2.4
+    image: bitnami/apache
     container_name: ${APP_NAME}_apache
     restart: always
     ports:
       - 80:8080
+      - 443:8443
     volumes:
       - ./_docker/apache/httpd.conf:/vhosts/httpd.conf:ro
+      - ./_docker/certs:/certs
       - web:/app
     depends_on:
       - mariadb
