Add support of auth data for Redis

--- a/.env
+++ b/.env
@@ -8,3 +8,7 @@ MYSQL_ROOT_PASSWORD=root
 DB_NAME=smf
 DB_USER=user
 DB_PASS=pass
+
+#REDIS_USERNAME=myadmin
+#REDIS_PASSWORD=password
+#REDIS_DISABLE_DEFAULT_USER="true"
