--- a/compose.yaml
+++ b/compose.yaml
@@ -4,17 +4,17 @@ services:
     image: memcached:alpine
     container_name: ${APP_NAME}_memcached
 
-  #redis:
-  #  image: redis:alpine
-  #  container_name: ${APP_NAME}_redis
-  #  command: redis-server /usr/local/etc/redis/redis.conf
-  #  restart: always
-  #  volumes:
-  #      - redis:/data
-  #      - ./_docker/redis/redis.conf:/usr/local/etc/redis/redis.conf
-  #  environment:
-  #    REDIS_USERNAME: ${REDIS_USERNAME}
-  #    REDIS_PASSWORD: ${REDIS_PASSWORD}
+  # redis:
+  #   image: redis:alpine
+  #   container_name: ${APP_NAME}_redis
+  #   command: redis-server /usr/local/etc/redis/redis.conf
+  #   restart: always
+  #   volumes:
+  #     - redis:/data
+  #     - ./_docker/redis/redis.conf:/usr/local/etc/redis/redis.conf
+  #   environment:
+  #     REDIS_USERNAME: ${REDIS_USERNAME}
+  #     REDIS_PASSWORD: ${REDIS_PASSWORD}
 
   # ftp:
   #   image: stilliard/pure-ftpd
@@ -36,17 +36,17 @@ services:
   #     - smf
 
   # mysql:
-  #     image: mysql
-  #     container_name: ${APP_NAME}_mysql
-  #     command: --default-authentication-plugin=mysql_native_password
-  #     restart: always
-  #     volumes:
-  #       - mysql:/var/lib/mysql
-  #     environment:
-  #       - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
-  #       - MYSQL_DATABASE=${DB_NAME}
-  #       - MYSQL_USER=${DB_USER}
-  #       - MYSQL_PASSWORD=${DB_PASS}
+  #   image: mysql
+  #   container_name: ${APP_NAME}_mysql
+  #   command: --default-authentication-plugin=mysql_native_password
+  #   restart: always
+  #   volumes:
+  #     - mysql:/var/lib/mysql
+  #   environment:
+  #     - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
+  #     - MYSQL_DATABASE=${DB_NAME}
+  #     - MYSQL_USER=${DB_USER}
+  #     - MYSQL_PASSWORD=${DB_PASS}
 
   mariadb:
     image: mariadb
@@ -89,6 +89,7 @@ services:
       context: ./_docker/php-fpm
       args:
         PHP_VERSION: ${PHP_VERSION}
+        SMF_VERSION: ${SMF_VERSION}
       target: backend
     container_name: ${APP_NAME}_php_fpm
     working_dir: /app
