Farewell to bitnami/apache

--- a/_docker/apache/httpd-vhosts.conf
+++ b/_docker/apache/httpd-vhosts.conf
@@ -1,10 +1,19 @@
-<VirtualHost 127.0.0.1:8443 _default_:8443>
+<VirtualHost *:80>
+    ServerName localhost
+    RewriteEngine on
+    RewriteCond %{HTTPS} off
+    RewriteRule ^(.*) https://%{HTTP_HOST}%{REQUEST_URI} [R=301]
+</VirtualHost>
+
+<VirtualHost *:443>
+    ServerName localhost
     DocumentRoot "/app"
+
     ProxyPassMatch ^/(.*\.php(/.*)?)$ fcgi://php-fpm:9000/app/$1
 
     SSLEngine on
-    SSLCertificateFile "/opt/bitnami/apache/conf/bitnami/certs/server.crt"
-    SSLCertificateKeyFile "/opt/bitnami/apache/conf/bitnami/certs/server.key"
+    SSLCertificateFile "/usr/local/apache2/conf/certs/server.crt"
+    SSLCertificateKeyFile "/usr/local/apache2/conf/certs/server.key"
 
     RequestHeader set X-Forwarded-Proto "https" early
     RequestHeader set X-Forwarded-Ssl "on"
